--- a/New folder/code only - Copy.ipynb
+++ b/New folder/code only - Copy.ipynb
@@ -712,13 +712,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 164,
    "id": "3e656d3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>OTI</th>\n",
+       "      <td>21174.0</td>\n",
+       "      <td>30.177860</td>\n",
+       "      <td>11.961138</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>250.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WTI</th>\n",
+       "      <td>21174.0</td>\n",
+       "      <td>0.259564</td>\n",
+       "      <td>0.438406</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ATI</th>\n",
+       "      <td>21174.0</td>\n",
+       "      <td>27.740059</td>\n",
+       "      <td>5.750776</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>44.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OLI</th>\n",
+       "      <td>21174.0</td>\n",
+       "      <td>69.661519</td>\n",
+       "      <td>27.792580</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OTI_A</th>\n",
+       "      <td>21174.0</td>\n",
+       "      <td>0.004770</td>\n",
+       "      <td>0.068902</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OTI_T</th>\n",
+       "      <td>21174.0</td>\n",
+       "      <td>0.002220</td>\n",
+       "      <td>0.047063</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MOG_A</th>\n",
+       "      <td>21174.0</td>\n",
+       "      <td>0.101681</td>\n",
+       "      <td>0.302236</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VL1</th>\n",
+       "      <td>20652.0</td>\n",
+       "      <td>241.023455</td>\n",
+       "      <td>9.392606</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>235.8</td>\n",
+       "      <td>242.4</td>\n",
+       "      <td>247.3</td>\n",
+       "      <td>261.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VL2</th>\n",
+       "      <td>20652.0</td>\n",
+       "      <td>240.490538</td>\n",
+       "      <td>9.784313</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>235.5</td>\n",
+       "      <td>241.9</td>\n",
+       "      <td>246.4</td>\n",
+       "      <td>261.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VL3</th>\n",
+       "      <td>20652.0</td>\n",
+       "      <td>239.923107</td>\n",
+       "      <td>8.712857</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>235.5</td>\n",
+       "      <td>241.0</td>\n",
+       "      <td>245.1</td>\n",
+       "      <td>261.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IL1</th>\n",
+       "      <td>20652.0</td>\n",
+       "      <td>70.565170</td>\n",
+       "      <td>42.963096</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>43.6</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>98.4</td>\n",
+       "      <td>224.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IL2</th>\n",
+       "      <td>20652.0</td>\n",
+       "      <td>56.522187</td>\n",
+       "      <td>41.311167</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>28.7</td>\n",
+       "      <td>48.7</td>\n",
+       "      <td>80.3</td>\n",
+       "      <td>253.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IL3</th>\n",
+       "      <td>20652.0</td>\n",
+       "      <td>79.705825</td>\n",
+       "      <td>45.816941</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>53.1</td>\n",
+       "      <td>77.7</td>\n",
+       "      <td>111.9</td>\n",
+       "      <td>247.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VL12</th>\n",
+       "      <td>20652.0</td>\n",
+       "      <td>363.387391</td>\n",
+       "      <td>140.051283</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>397.4</td>\n",
+       "      <td>416.2</td>\n",
+       "      <td>427.1</td>\n",
+       "      <td>446.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VL23</th>\n",
+       "      <td>20652.0</td>\n",
+       "      <td>362.494984</td>\n",
+       "      <td>139.488304</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>398.2</td>\n",
+       "      <td>415.3</td>\n",
+       "      <td>424.9</td>\n",
+       "      <td>444.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VL31</th>\n",
+       "      <td>20652.0</td>\n",
+       "      <td>363.871165</td>\n",
+       "      <td>140.200657</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>399.0</td>\n",
+       "      <td>416.5</td>\n",
+       "      <td>427.3</td>\n",
+       "      <td>447.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>INUT</th>\n",
+       "      <td>20652.0</td>\n",
+       "      <td>25.170497</td>\n",
+       "      <td>15.705378</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>24.8</td>\n",
+       "      <td>35.1</td>\n",
+       "      <td>145.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         count        mean         std   min    25%    50%    75%    max\n",
+       "OTI    21174.0   30.177860   11.961138   0.0   26.0   30.0   34.0  250.0\n",
+       "WTI    21174.0    0.259564    0.438406   0.0    0.0    0.0    1.0    1.0\n",
+       "ATI    21174.0   27.740059    5.750776   0.0   24.0   28.0   32.0   44.0\n",
+       "OLI    21174.0   69.661519   27.792580  36.0   40.0   64.0  100.0  100.0\n",
+       "OTI_A  21174.0    0.004770    0.068902   0.0    0.0    0.0    0.0    1.0\n",
+       "OTI_T  21174.0    0.002220    0.047063   0.0    0.0    0.0    0.0    1.0\n",
+       "MOG_A  21174.0    0.101681    0.302236   0.0    0.0    0.0    0.0    1.0\n",
+       "VL1    20652.0  241.023455    9.392606   0.0  235.8  242.4  247.3  261.2\n",
+       "VL2    20652.0  240.490538    9.784313   0.0  235.5  241.9  246.4  261.3\n",
+       "VL3    20652.0  239.923107    8.712857   0.0  235.5  241.0  245.1  261.3\n",
+       "IL1    20652.0   70.565170   42.963096   0.0   43.6   67.5   98.4  224.1\n",
+       "IL2    20652.0   56.522187   41.311167   0.0   28.7   48.7   80.3  253.6\n",
+       "IL3    20652.0   79.705825   45.816941   0.0   53.1   77.7  111.9  247.3\n",
+       "VL12   20652.0  363.387391  140.051283   0.0  397.4  416.2  427.1  446.5\n",
+       "VL23   20652.0  362.494984  139.488304   0.0  398.2  415.3  424.9  444.8\n",
+       "VL31   20652.0  363.871165  140.200657   0.0  399.0  416.5  427.3  447.3\n",
+       "INUT   20652.0   25.170497   15.705378   0.0   15.3   24.8   35.1  145.8"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Merge both dataframes along DeviceTimeStamp\n",
-    "transformer = pd.merge(tf, current_voltage_data, on='DeviceTimeStamp', how='outer')\n"
+    "transformer = pd.merge(tf, current_voltage_data, on='DeviceTimeStamp', how='outer')\n",
+    "trans_details=transformer.drop(['DeviceTimeStamp'],axis=1)\n",
+    "trans_details.describe().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "0252f0cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceTimeStamp      0\n",
+       "OTI                187\n",
+       "WTI                187\n",
+       "ATI                187\n",
+       "OLI                187\n",
+       "OTI_A              187\n",
+       "OTI_T              187\n",
+       "MOG_A              187\n",
+       "VL1                709\n",
+       "VL2                709\n",
+       "VL3                709\n",
+       "IL1                709\n",
+       "IL2                709\n",
+       "IL3                709\n",
+       "VL12               709\n",
+       "VL23               709\n",
+       "VL31               709\n",
+       "INUT               709\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transformer.isnull().sum()"
    ]
   },
   {
